# hiruki

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/example0/: CMakeLists.txt  README.md  credits.txt  main.cpp  mainScene.hpp  myScene.hpp
examples/example0/assets/: barrel.mtl  barrier.mtl  car.mtl  cat.mtl  cop.mtl  floor.mtl  garage.mtl  scene.blend  scene.blend1
examples/example0/assets/src/: psx_cop.glb  psx_style_barrel.glb  revolver_noir.glb
examples/example1/: CMakeLists.txt  README.md  main.cpp  mainScene.hpp
examples/example1/assets/: cube.mtl
examples/example2/: CMakeLists.txt  README.md  main.cpp  myScene.hpp
examples/example2/assets/: barrel.mtl  garage.mtl  scene.blend1
examples/example2/assets/src/: psx_style_jersey_barrier.glb  scene.gltf
src/: ALAGARD_RAW.c  CMakeLists.txt  engine.cpp  engine.hpp  hiruki.cpp  hiruki.hpp  scene.hpp
src/graphics/: clipping.cpp  clipping.hpp  material.hpp  mesh.cpp  mesh.hpp  renderPipeline.cpp  renderPipeline.hpp  texCoord.cpp  texCoord.hpp  texture.cpp  texture.hpp  triangle.hpp
src/math/: matrix4.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
